Infographic and fix sizing on mobile.

--- a/web/public/style.css
+++ b/web/public/style.css
@@ -1,6 +1,6 @@
 body {
     overflow-y: scroll;
-    text-size-adjust: 100%;
+    text-size-adjust: 250%;
 }
 html {
     font-family: sans-serif;
